<resources>
  <string name="app_name">Zealicon</string>


  <!-- bottom bar names-->
  <string name="home">Home</string>
  <string name="schedule">Schedule</string>
  <string name="info">Info</string>
  <string name="register">Register</string>
  <string name="answer">Answer</string>

  <!-- Zealid screen -->
  <string name="congrats">CONGRATULATIONS</string>
  <string name="succes_register">You have been succesfully registered! </string>
  <string name="your_id">Your Zealicon Id is</string>
  <string name="rules">Note: You need this registration id and pay \nregistration amount at the registration desk \nNon-JSS Students need to bring their College-Ids and passport size photographs</string>

  <!-- Event Detail Page -->
  <string name="going">Going</string>
  <string name="interested">Interested</string>

  <!-- Array values for register -->
  <string-array name="year">
    <item>1</item>
    <item>2</item>
    <item>3</item>
    <item>4</item>
  </string-array>

  <string-array name="branch">
    <item>CSE</item>
    <item>IT</item>
    <item>ME</item>
    <item>EC</item>
    <item>EE</item>
    <item>Civil</item>
    <item>IC</item>
    <item>EEE</item>
  </string-array>

  <string-array name="course">
    <item>B-Tech</item>
    <item>MCA</item>
    <item>MBA</item>
  </string-array>

  <string name="about_effe">Pokemon at 5, and then Beyblade at 5.30. Tom and Jerry, Looney tunes, Scooby Doo, Shaktiman…. That’s so Raven...Video games..\n
    Do you yearn to live and bring all those times back ?\n
    If the answer is Yes...then we are back with our Zeal… are you ?\n
    JSS Academy of Technical Education, Noida presents to you the most enthusiastic annual
    Techno-Cultural fest in NCR- the “Zealicon”, turning 10 with the 90’s nostalgia.
    This time with a different aura and touchstone but an antiquated journey down to one’s
    memory lane.\n
    Join us on this nostalgic journey from 14th March 2018 - 17th March 2018 with opportunity
    to be a part of some airing and zestful events. Promising, loads of fun, prizes and
    exposure to make this fest Bigger this time!\n
    Further details will be disclosed soon. Keep visiting this page to stay updated on your journey in ZEALICON'18.
> </string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_str">[]</string>
  <string name="day1events">day1events</string>
  <string name="day2events">day2events</string>
  <string name="day3events">day3events</string>
  <string name="day4events">day4events</string>


</resources>
