<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/schedule"
        android:icon="@mipmap/ic_access_time_black_24dp"
        android:title="@string/schedule"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/register"
        android:icon="@drawable/registration"
        android:title="@string/register"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/info"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/info"
        app:showAsAction="ifRoom" />

</menu>